syntax = "proto3";

package demo.user.v1;

option go_package = "api/user/v1;v1";

service UserService {
    rpc Register (RegisterReq) returns (RegisterReply) {
    }

    rpc Login (LoginReq) returns (LoginReply) {
    }

    rpc Logout (LogoutReq) returns (LogoutReply) {
    }
}

message RegisterReq {
    string username = 1;
    string password = 2;
}

message RegisterReply {
    int64 id = 1;
}


message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginReply {
    string token = 1;
}

message LogoutReq {
}

message LogoutReply {
}
